Minor css change to fix an issue with long download names. The information above the progress bar was overflowing in these cases. Now the text is trimed.

--- a/seedboxerDownloads/css/popup.css
+++ b/seedboxerDownloads/css/popup.css
@@ -12,11 +12,18 @@ body {
 	
 }
 #info {
-	float : left;
-	width: 145px;
+	float: left;
+	width: 239px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
+
+#percentage {
+	float: left;
+}
+
 #play-pause-button {
-	float : right;
 	cursor: pointer;
 }
 #play-pause-button  img{
